content/blog/2025-01-01-thin_delegate_aux/tests/ui/enum_delegate_v020/fail_super_trait.stderr
error: enum_delegate does not currently support supertraits
  --> tests/ui/enum_delegate_v020/fail_super_trait.rs:4:15
   |
4  | trait ShapeI: std::fmt::Debug {
   |               ^^^
...
15 | #[enum_delegate::implement(ShapeI)]
   | ----------------------------------- in this procedural macro expansion
   |
   = note: this error originates in the macro `ShapeI` which comes from the expansion of the attribute macro `enum_delegate::implement` (in Nightly builds, run with -Z macro-backtrace for more info)
